--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
 
         <title>Phone (1).pdf</title>
-        <link rel="stylesheet" href="../codigo/styleindex.css">
+        <link rel="stylesheet" href="styleindex.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
