--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
        <main>
         <article class="full-text">
-            <p><a href="../codigo/pagina1.html" class="transition-link">Phone (1)</a>, was the first</p>
+            <p><a href="pagina1.html" class="transition-link">Phone (1)</a>, was the first</p>
             <p>phone created by the</p>
             <p>British company</p>
             <p>- <a href="../codigo/pagina2.html" class="transition-link">NOTHING</a></p>
