--- a/pagina1.html
+++ b/pagina1.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
 
         <title>Phone (1)</title>
-        <link rel="stylesheet" href="../codigo/style.css">
+        <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
