--- a/pagina1.html
+++ b/pagina1.html
@@ -16,7 +16,7 @@
             
             <div class="mae">
                 <h2 id="titulohide">Phone (1)</h2>
-                <img src="imgs/img1.webp" alt="img1p2">
+                <img src="./imgs/img1.webp" alt="img1p2">
                 <p id="legenda">nothing phone (1), image by nothing</p>
                 <div class="grupo">
                     <h2>Phone (1)</h2>
