--- a/pagina1.html
+++ b/pagina1.html
@@ -65,7 +65,7 @@
                     </div>
                 </div>
             </div>
-            <a href="../codigo/index.html" id="fixedbutton"> &lt&lt&lt&lt&lt&lt&lt&lt&lt&lt&lt&lt&ltback home </a>
+            <a href="index.html" id="fixedbutton"> &lt&lt&lt&lt&lt&lt&lt&lt&lt&lt&lt&lt&ltback home </a>
             
         </main>
 
