--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p><a href="../codigo/pagina5.html" class="transition-link">it performed</a>.</p>
         </article>
         <article class="small-text">
-            <p><a href="../codigo/pagina1.html" class="transition-link">Phone (1)</a>, was</p>
+            <p><a href="pagina1.html" class="transition-link">Phone (1)</a>, was</p>
             <p>the first phone</p>
             <p>created by the</p>
             <p>British company</p>
