--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 
         <div id="transition-overlay"></div>
 
-       <main>
+    <!-- <a href="pagina1.html" class="transition-link">Phone (1)</a>, -->
+   <main>
         <article class="full-text">
-            <p><a href="pagina1.html" class="transition-link">Phone (1)</a>, was the first</p>
+            <p>Hi, i´m Gabriel and this is my Portfolio:</p>
             <p>phone created by the</p>
             <p>British company</p>
             <p>- <a href="../codigo/pagina2.html" class="transition-link">NOTHING</a></p>
