--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- <a href="pagina1.html" class="transition-link">Phone (1)</a>, -->
    <main>
         <article class="full-text">
-            <p>Hi, i´m Gabriel and this is my Portfolio:</p>
+            <p>Hi, im Gabriel and this is my Portfolio:</p>
             <p>phone created by the</p>
             <p>British company</p>
             <p>- <a href="../codigo/pagina2.html" class="transition-link">NOTHING</a></p>
