--- a/pagina1.html
+++ b/pagina1.html
@@ -16,7 +16,7 @@
             <h2>works</h2>
             <div class="mae">
                 <h2 id="titulohide">works</h2>
-                <img src="../imgs/final.jpg" alt="img1p2">
+                <img src="./imgs/final.jpg" alt="img1p2">
                 <div class="grupo">
                     <div id="texto1">
                         <p>Logo, Manta de Retalhos, 2025</p>
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <div class="mae">
-                <img src="../imgs/cntrlChaos.gif" alt="img2p2">
+                <img src="./imgs/cntrlChaos.gif" alt="img2p2">
                 <div class="grupo">
                     <div id="texto1">
                     <p>CNTRL+CHAOS about Anarchysm & Design,<br> Magazine (concept), 2025</p>
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="mae">
-                <img src="../imgs/instaPark.gif" alt="img2p2">
+                <img src="./imgs/instaPark.gif" alt="img2p2">
                 <div class="grupo">
                     <div id="texto1">
                     <p>Concert visual, The Parkinglot band, 2025</p>
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="mae">
-                <img src="../imgs/workArt.gif" alt="img2p2">
+                <img src="./imgs/workArt.gif" alt="img2p2">
                 <div class="grupo">
                     <div id="texto1">
                     <p>Motion Graphic, 2025</p>
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="mae">
-                <img src="../imgs/casaViver.jpg" alt="img2p2">
+                <img src="./imgs/casaViver.jpg" alt="img2p2">
                 <div class="grupo">
                     <div id="texto1">
                     <p>Casa para viver, Modular type (concept), 2025</p>
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="mae">
-                <img src="../imgs/AA25.gif" alt="img2p2">
+                <img src="./imgs/AA25.gif" alt="img2p2">
                 <div class="grupo">
                     <div id="texto1">
                     <p>Everything moves, Workshop (Instructor),<br> E.S. Antonio Arroio 2025</p>
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="mae">
-                <img src="../imgs/vinilAnimatic.gif" alt="img2p2">
+                <img src="./imgs/vinilAnimatic.gif" alt="img2p2">
                 <div class="grupo">
                     <div id="texto1">
                     <p>Vinyl addiction, animated poster, 2025</p>
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div class="mae">
-                <img src="../imgs/bowieMag.png" alt="img2p2">
+                <img src="./imgs/bowieMag.png" alt="img2p2">
                 <div class="grupo">
                     <div id="texto1">
                     <p>Blitz Mag, Bowie special edition (concept), 2024</p>
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="mae">
-                <img src="../imgs/closing.gif" alt="img2p2">
+                <img src="./imgs/closing.gif" alt="img2p2">
                 <div class="grupo">
                     <div id="texto1">
                     <p>Poster & animation, Ecosta Caparica, 2024</p>
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="mae">
-                <img src="../imgs/thankYou.jpg" alt="img2p2">
+                <img src="./imgs/thankYou.jpg" alt="img2p2">
                 <div class="grupo">
                     <div id="texto1">
                     <p>Poster, Thank You Mama Caparica, 2023</p>
@@ -96,7 +96,7 @@
                 </div>
             </div>
             <div class="mae">
-                <img src="../imgs/logoEncosta.png" alt="img2p2">
+                <img src="./imgs/logoEncosta.png" alt="img2p2">
                 <div class="grupo">
                     <div id="texto1">
                     <p>Logo, Ecosta Caparica, 2022</p>
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="mae">
-                <img src="../imgs/flyerEncosta.png" alt="img2p2">
+                <img src="./imgs/flyerEncosta.png" alt="img2p2">
                 <div class="grupo">
                     <div id="texto1">
                     <p>flyer, Ecosta Caparica, 2022</p>
@@ -118,7 +118,7 @@
                     </div>
                 </div>
             </div>
-            <a href="../codigo/index.html" id="fixedbutton"> &lt&lt&lt&lt&lt&lt&lt&lt&lt&lt&lt&lt&ltback home </a>
+            <a href="index.html" id="fixedbutton"> &lt&lt&lt&lt&lt&lt&lt&lt&lt&lt&lt&lt&ltback home </a>
             
         </main>
 
