--- a/pagina3.html
+++ b/pagina3.html
@@ -7,7 +7,7 @@
 
 
         <title>How they made it</title>
-        <link rel="stylesheet" href="../codigo/style.css">
+        <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -17,7 +17,7 @@
             <h2>about</h2>
             <h2 id="titulohide">about</h2>
             <div class="mae">
-                <img src="../imgs/face.jpg" alt="img2p2">
+                <img src="./imgs/face.jpg" alt="img2p2">
                 <div class="grupo">
                     <div id="texto1">
                     <p>From Almada, studying Graphic Design in Lisbon (FBAUL). Obsessed with music, sound, and cinema.<br>I bring those passions into every project whether it’s editorial design, motion graphics, or anything in between. Creativity is my fuel.
@@ -28,7 +28,7 @@
                 </div>
             </div>
 
-            <a href="../codigo/index.html" id="fixedbutton"> &lt&lt&lt&lt&lt&lt&lt&lt&lt&lt&lt&lt&ltback home </a>
+            <a href="index.html" id="fixedbutton"> &lt&lt&lt&lt&lt&lt&lt&lt&lt&lt&lt&lt&ltback home </a>
             
         </main>
 
