--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <meta charset="UTF-8">
 
-        <title>Phone (1).pdf</title>
+        <title>pdf.guga</title>
         <link rel="stylesheet" href="styleindex.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
