--- a/pagina2.html
+++ b/pagina2.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
 
 
-        <title>Nothing</title>
+        <title>pdf.guga</title>
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
