--- a/pagina1.html
+++ b/pagina1.html
@@ -114,7 +114,7 @@
             <div class="mae">
                 <div class="grupo">
                     <div id="textoIG">
-                    <a href="https://www.instagram.com/pdf.guga/" target="_blank" class="transition-link">Check out more stuff on my IG</a>
+                    <a href="https://www.instagram.com/pdf.guga/" target="_blank" class="transition-link">More stuff on my IG</a>
                     </div>
                 </div>
             </div>
