--- a/pagina4.html
+++ b/pagina4.html
@@ -20,7 +20,7 @@
                 <img src="./imgs/instaimage.webp" alt="img2p2">
                 <div class="grupo">
                     <div id="texto1">
-                    <p>Always avalable to work and collaborate in big or small projects.</p>
+                    <p>Always available to work and collaborate in big or small projects.</p>
                     <p>mail - guga.valbom@gmail.com</p>
                     <br>
                     <a href="https://www.instagram.com/pdf.guga/" class="transition-link">Instagram - @pdf.guga</a>
