--- a/pagina3.html
+++ b/pagina3.html
@@ -20,7 +20,7 @@
                 <img src="./imgs/face.jpg" alt="img2p2">
                 <div class="grupo">
                     <div id="texto1">
-                    <p>From Almada, studying Graphic Design in Lisbon (FBAUL). Obsessed with music, sound, and cinema.<br>I bring those passions into every project whether it’s editorial design, motion graphics, or anything in between. Creativity is my fuel.
+                    <p>From Almada, studying Graphic Design in Lisbon (Faculdade Belas-Artes). Obsessed with music, sound, and cinema.<br>I bring those passions into every project whether it’s editorial design, motion graphics, or anything in between. Creativity is my fuel.
                     </p>
                     <br>
                     <a href="https://www.instagram.com/pdf.guga/" class="transition-link">Instagram - @pdf.guga</a>
